--- a/app/src/main/res/layout/activity_artist_list2.xml
+++ b/app/src/main/res/layout/activity_artist_list2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/key1"
-    tools:context=".ArtistListActivity">
+    tools:context=".View.ArtistListActivity">
 
     <SearchView
         android:layout_width="match_parent"
