--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/key1"
-    tools:context=".CategoryListActivity">
+    tools:context=".View.CategoryListActivity">
    <SearchView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
