--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/key1"
-    tools:context=".Search">
+    tools:context=".View.SearchFragment">
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/search"
