--- a/app/src/main/res/layout/activity_artist_list2.xml
+++ b/app/src/main/res/layout/activity_artist_list2.xml
@@ -10,7 +10,7 @@
 
     <SearchView
         android:id="@+id/search_bar_artist"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/lavender_border"
